# sfr_lld_generation

./: .gitignore  README.md  USAGE_SCENARIOS.md  pyproject.toml
sample/: dummy_llm_config.json  ipxact_sample.xlsx  old_lld.h  sfr.diff  sfr_new.h  sfr_old.h
src/ipxact_lld_gen/: cli.py  models.py
src/ipxact_lld_gen/diff/: sfr_diff_parser.py
src/ipxact_lld_gen/generator/: lld_header_generator.py  llm_client.py
src/ipxact_lld_gen/parser/: excel_parser.py  lld_header_ast_parser.py  sfr_header_parser.py
src/ipxact_lld_gen/patch/: ast_lld_header_patcher.py
src/ipxact_lld_gen/semantics/: rule_engine.py
tests/: test_phase7.sh
