[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ipxact-lld-gen-phase7"
version = "0.7.0"
description = "Existing sfr.h + Excel to lld.h generator/updater without markers"
requires-python = ">=3.9"
dependencies = ["pandas", "openpyxl"]

[tool.setuptools.packages.find]
where = ["src"]
